# job-tracker

./: .gitignore  Cargo.toml  Dioxus.toml  Makefile  input.css  package-lock.json
.github/workflows/: cd.yaml  ci.yaml
application_context/: Cargo.toml
application_context/src/: application_context.rs  lib.rs
desktop/: Cargo.toml
desktop/assets/: main.css  support.css  tailwind.css
desktop/src/: config.rs  dirs.rs  keyboard.rs  logs.rs  main.rs
desktop/src/views/: help.rs  home.rs  mod.rs  support.rs
event-broker/: Cargo.toml
event-broker/src/: lib.rs
event-broker/src/events/: mod.rs  storage_events.rs
icons/: icon.icns
mobile/src/: main.rs
mobile/src/views/: home.rs
storage/: Cargo.toml  README.md
storage/src/: company.rs  error.rs  flag.rs  lib.rs  role.rs  stores.rs  test_helper.rs  time.rs  utils.rs
storage/src/application_context/: mod.rs
storage/src/company/: mod.rs  rocks_company_store.rs  stub_company_store.rs
storage/src/composite_store/: general_store.rs  mod.rs
storage/src/composite_store/property/: has_future_store.rs  has_store.rs  mod.rs
storage/src/composite_store/store/: general_store.rs  json_thread_safe_general_store.rs  mod.rs  stub_thread_safe_general_store.rs  thread_safe_general_store.rs
storage/src/flag/: mod.rs  rocks_flag_store.rs  stub_flag_store.rs
storage/src/general_store/: general_store.rs  mod.rs
storage/src/logging/: json_log_fetcher.rs  mod.rs  stub_log_fetcher.rs
storage/src/role/: mod.rs  rocks_role_store.rs  stub_role_store.rs
storage/src/storable/: mod.rs
storage/src/storable/object/: company.rs  flag.rs  interview.rs  mod.rs  question.rs  role.rs  value.rs
storage/src/storable/property/: apply_partial.rs  check_partial_complete.rs  has_company.rs  has_deleted.rs  has_id.rs  has_name.rs  has_role.rs  is_partial_complete.rs  mod.rs
storage/src/storage/: mod.rs
storage/src/storage/medium/: json_storage.rs  mod.rs  stub_storage.rs
storage/src/storage/object_storage/: company_store.rs  flag_store.rs  interview_store.rs  mod.rs  question_store.rs  role_store.rs  value_store.rs
storage/src/storage/property/: base_store.rs  mod.rs  recall_by_company.rs  recall_by_id.rs  recall_by_name.rs  recall_by_role.rs
storage/src/store/: json.rs  libsql.rs  mod.rs  rocks.rs  stub.rs
storage/src/store/company/: json_company_store.rs  libsql_company_store.rs  mod.rs  rocks_company_store.rs  stub_company_store.rs
storage/src/store/flag/: json_flag_store.rs  libsql_flag_store.rs  mod.rs  rocks_flag_store.rs  stub_flag_store.rs
storage/src/store/role/: json_role_store.rs  libsql_role_store.rs  mod.rs  rocks_role_store.rs  stub_role_store.rs
storage/src/stores/: json_stores.rs  libsql_stores.rs  mod.rs  rocks_stores.rs  stub_stores.rs
ui/: Cargo.toml
ui/src/: company_list.rs  details.rs  echo.rs  editable.rs  error_message.rs  form_data_helper.rs  layout.rs  lib.rs  main_nav.rs  navbar.rs  router.rs  shortcut_helper.rs
ui/src/company_details/: mod.rs
ui/src/company_list/: company_list_item.rs  mod.rs
ui/src/components/: editable.rs  error_display.rs  mod.rs
ui/src/components/shortcuts/: mod.rs  shortcut_event.rs  shortcut_helper.rs
ui/src/flag_list/: empty_flag_list.rs  flag_list_item.rs  mod.rs  populated_flag_list.rs
ui/src/helpers/: create_route.rs  edit_with_form.rs  error_handlers.rs  mod.rs
ui/src/helpers/form_data_helper/: create_partial_from_form_data.rs  mod.rs  modify_with_form_data.rs
ui/src/interviews/: nav.rs
ui/src/questions_list/: populated_question_list.rs
ui/src/role_information/: mod.rs  populated_role_description.rs
ui/src/role_list/: empty_role_list.rs  mod.rs  populated_role_list.rs  role_list_item.rs
ui/src/roles_list/: mod.rs  role_list_item.rs
ui/src/shortcuts/: shortcut_event.rs
ui/src/value_list/: mod.rs  populated_value_list.rs  value_list_item.rs
ui/src/views/: help.rs  home.rs  mod.rs  support.rs
ui/src/views/details/: company_details.rs  interview_details.rs  mod.rs  questions_details.rs  role_details.rs
ui/src/views/help/: mod.rs
ui/src/views/home/: mod.rs
ui/src/views/home/company_list/: company_list_item.rs  mod.rs  populated_company_list.rs
ui/src/views/home/company_list/forms/: create_company.rs  edit_company_name.rs  mod.rs
ui/src/views/home/details/: company_details.rs  interview_details.rs  mod.rs  questions_details.rs  role_details.rs
ui/src/views/home/details/flag_list/: flag_list_item.rs  mod.rs  populated_flag_list.rs
ui/src/views/home/details/flag_list/forms/: create_flag.rs  edit_flag.rs  mod.rs
ui/src/views/home/details/interviews/: mod.rs  nav.rs
ui/src/views/home/details/interviews/forms/: create_interview.rs  edit_interview.rs  mod.rs
ui/src/views/home/details/questions_list/: mod.rs  populated_question_list.rs  question_list_item.rs
ui/src/views/home/details/questions_list/forms/: create_question.rs  edit_question.rs  mod.rs
ui/src/views/home/details/role_information/: mod.rs  populated_role_description.rs  role_description.rs
ui/src/views/home/details/role_information/forms/: edit_description.rs  mod.rs
ui/src/views/home/details/value_list/: mod.rs  populated_value_list.rs  value_list_item.rs
ui/src/views/home/details/value_list/forms/: create_value.rs  edit_value.rs  mod.rs
ui/src/views/home/role_list/: mod.rs  populated_role_list.rs  role_list_item.rs
ui/src/views/home/role_list/forms/: create_role.rs  edit_role_name.rs  mod.rs
ui/src/views/support/: mod.rs
web/src/: main.rs
web/src/views/: blog.rs  home.rs
