[workspace]
resolver = "2"
members = [
    "ui",
    "web",
    "desktop",
    "mobile",
    "server",
    "storage",
    "application_context",
]

[workspace.dependencies]
anyhow = "1.0.99"
dioxus = { version = "0.6.0" }
log = "0.4.27"
serde = "1.0.219"
serde_json = "1.0.142"

# workspace
ui = { path = "ui" }
server = { path = "server" }
storage = { path = "storage" }
application_context = { path = "application_context" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
