[package]
name = "job-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
application_context = { workspace = true }
dioxus = { workspace = true, features = ["router", "desktop"] }
directories = "6.0.0"
ui = { workspace = true, features = ["desktop"] }
storage = { workspace = true, features = ["desktop"] }
tokio = { version = "1.47.1", features = ["rt", "macros"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "std", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
desktop = ["dioxus/desktop"]
server = ["dioxus/server"]
