[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
chrono = { version = "0.4.41", features = ["serde"] }
partially = { version = "0.2.1", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["fs", "sync", "rt-multi-thread", "macros"] }
uuid = { version = "1.18.0", features = ["v4", "serde"] }

[dev-dependencies]
paste = "1.0.15"
tempdir = "0.3.7"
tokio = { version = "1.47.1", features = ["rt"] }

[features]
desktop = []
