[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
chrono = { version = "0.4.41", features = ["serde"] }
field_types = { version = "1.1.0", optional = true }
partially = { version = "0.2.1", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["fs", "sync", "rt-multi-thread", "macros"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }

[dev-dependencies]
paste = "1.0.15"
tempfile = "3.23.0"
tokio = { version = "1.47.1", features = ["rt"] }

[features]
desktop = []
field_names = [
    "dep:field_types"
]
