[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
dioxus = { workspace = true }
pulldown-cmark = "0.13.0"
server = { workspace = true }
storage = { workspace = true }
uuid = { version = "1.17.0", features = ["v4"] }
tokio = "1.45.1"

[features]
desktop = []
