[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
application_context = { workspace = true }
dioxus = { workspace = true }
dioxus-html = { version = "0.7.1", features = ["serialize"] }
pulldown-cmark = "0.13.0"
storage = { workspace = true }
uuid = { version = "1.17.0", features = ["v4"] }
log = "0.4.27"
serde = { workspace = true }
serde_json = { workspace = true } # Annoyingly this is only needed for HashMap deserialisation

[dev-dependencies]
dioxus = { workspace = true, features = ["router"] }
storage = { workspace = true, features = ["desktop"] }

[features]
desktop = []
